# rag-procurement

./: .env.example  .gitignore  .webui_secret_key  api.py  benchmark.py  benchmark_result.py  cleaner.py  compose.yaml  custom_meili.py  data.json  db_loader.py  dirty_splitter.py  embedder.py  flat.py  indexer.py  indexer2.py  indexer_res.py  label_split.py  law_questions.csv  loader.py  main.py  output.txt  pymu.py  pyproject.toml  question-set.csv  question.txt  question_simple_section.csv  reasoning_chat.py  recv_test.py  result_decoded.json  section_splitter.py  server.py  street_price.py  tax.csv  test.py  test.yaml  tmp.txt  tools.py  utf.py  vectorstore.py
data/: Additional_Website_Landtax.label.jsonl  additional.label.jsonl  additional_data.label.jsonl  all.label.jsonl  crops.label.jsonl  crops2.label.jsonl  qa.label.jsonl  streets_prices.label.jsonl  กฎกระทรวง-7ฉบับ.label.jsonl  พรบ-จัดซื้อจัดจ้าง-2560.label.jsonl  พรบ2562.section.jsonl  ระเบียบกระทรวงการคลัง-การจัดซื้อจัดจ้าง.label.jsonl
raw/: Additional_Website_Landtax.label.txt  additional.label.txt  additional_data.label.txt  all.label.txt  cleaned.json  cleaned.txt  crops.label.txt  crops.txt  crops2.label.txt  dirty.json  dirty.txt  qa.label.txt  streets_prices.csv  streets_prices.label.txt  streets_prices.label.txt.skip  กฎกระทรวง-7ฉบับ.label.txt  พรบ-จัดซื้อจัดจ้าง-2560.label.txt  ระเบียบกระทรวงการคลัง-การจัดซื้อจัดจ้าง.label.txt
result/: result-2024-0-0-v1.json  result-2024-10-15 16:50:05-recursive-query.json  result-2024-10-18-17:59:01-all-files.json  result-2024-10-22-12:55:15-csv-fix.json  (+16 more)
(+29 files in other folders)
