[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
venvPath = "."
venv = ".venv"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "ruff>=0.6.5",
    "vllm>=0.6.1.post2",
    "pypdf>=4.3.1",
    "langchain-chroma>=0.1.4",
    "sentence-transformers>=3.1.0",
    "chromadb>=0.5.3",
    "protobuf==3.20.*",
    "langchain-experimental>=0.3.0",
    "unstructured[pdf]>=0.15.12",
    "langchain-openai>=0.2.0",
    "flashrank>=0.2.9",
    "asyncio>=3.4.3",
    "aiofiles>=24.1.0",
]
